add firebase config to html

--- a/public/index.html
+++ b/public/index.html
@@ -25,4 +25,18 @@
   <body>
     <div id="root"></div>
   </body>
+
+<script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCGnt21Pa1-MQgK0RyuvAugnmF0ooe18k0",
+    authDomain: "protokei-57656.firebaseapp.com",
+    databaseURL: "https://protokei-57656.firebaseio.com",
+    projectId: "protokei-57656",
+    storageBucket: "protokei-57656.appspot.com",
+    messagingSenderId: "328751560436"
+  };
+  firebase.initializeApp(config);
+</script>
 </html>
